# fc-em

./: README.md  all_utils.py  aug_utils.py  configs.py  dataloader.py  main.py  main_medi.py  pc_utils.py  requirements.txt
MedPT3D/: intra3d.py
PCT_Pytorch/: util.py
PCT_Pytorch/pointnet2_ops_lib/: setup.py
PCT_Pytorch/pointnet2_ops_lib/pointnet2_ops/: __init__.py  _ext.py  pointnet2_modules.py  pointnet2_utils.py
attack/CW/: AOF.py  AdvPC.py  Perturb.py  PerturbMAE.py  UAdvPC.py  UAdvPCADVT.py  UKNN.py  __init__.py
attack/util/: adv_utils.py  clip_utils.py  dist_utils.py
configs/defense/: if_defense.yaml  mixup.yaml  pgd.yaml  rsmix.yaml  run_fc_em_defense.sh  trades.yaml
configs/extra/face/: bsm2017_eval.yaml  bsm2017_gen.yaml
configs/extra/intra/: intra_eval.yaml  intra_gen.yaml
configs/extra/scan/: scan_eval.yaml  scan_gen.yaml
configs/modelnet40/fc_errmin/: fc_em_eval.yaml  fc_em_gen.yaml
configs/modelnet40/reg_errmax/: reg_ap_eval.yaml  reg_ap_gen.yaml  reg_ap_t_eval.yaml  reg_ap_t_gen.yaml
configs/modelnet40/reg_errmin/: reg_em_eval.yaml  reg_em_gen.yaml
configs/modelnet40/standard_errmax/: ce_ap_eval.yaml  ce_ap_gen.yaml  ce_ap_t_eval.yaml  (+1 more)
dgcnn/pytorch/: data.py  model.py
etw_pytorch_utils/: pyproject.toml  tox.ini
face/: data.py
models/: __init__.py  dgcnn.py  model_utils.py  pointnet.py  pointnet2.py  rscnn.py
pointnet2_pyt/: setup.py
pointnet2_pyt/pointnet2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pointnet_pyt/pointnet/: model.py
rs_cnn/models/: rscnn_ssn_cls.py
rs_cnn/utils/: pointnet2_modules_updated.py
(+10 files in other folders)
