[tool.poetry]
name = "etw_pytorch_utils"
version = "1.1.2"
description = ""
authors = ["Erik Wijmans <etw@gatech.edu>"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
numpy = "^1.16"
tqdm = "^4.29"
scipy = "^1.2"
visdom = "^0.1.8"
statistics = "^1.0"
torch = "^1.0"

[tool.poetry.dev-dependencies]
tox = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
